--- a/templates/home/agregar_reporte.html
+++ b/templates/home/agregar_reporte.html
@@ -45,7 +45,7 @@ action="{% url shorten-mantenimiento-doc-add %}" {% endif %}>
       {% endif %}
     </div>
     <div class="modal-footer">
-     <input class="btn-primary" name="grabar" value="{% if doc %}Modificar{% else %}Guardar{% endif %}" type="submit">
+     <input class="btn-primary" name="grabar" value="{% if reporte %}Modificar{% else %}Guardar{% endif %}" type="submit">
      <input class="btn" name="grabar" value="Cerrar" type="button" onclick="cerrarformulario('contenido');">
     </div>
 </div>
@@ -54,7 +54,7 @@ action="{% url shorten-mantenimiento-doc-add %}" {% endif %}>
   {% endblock %}
   {% block scriptjs %}  
 <script>
-$('#frmdoc').submit(function() {{% if not doc %}
+$('#frmdoc').submit(function() {{% if not reporte %}
 if($('#id_archivo').val()==''){  
   alert('Debe adjuntar el archivo a subir');return false;  
 }{% endif %}
@@ -62,7 +62,7 @@ if($("#id_descripcion").val()==''){
   alert('Debe agregar una breve descripción sobre el archivo a subir');
   $("#id_descripcion").focus(); return false;
 }
-return confirmar('¿Desea {% if doc %}Modificar{% else %}Guardar{% endif %} el registro?');
+return confirmar('¿Desea {% if reporte %}Modificar{% else %}Guardar{% endif %} el registro?');
 });
 $(document).ready(function() {
   fecha = new Date();
