--- a/templates/home/consultar_reporte.html
+++ b/templates/home/consultar_reporte.html
@@ -1,6 +1,6 @@
   {% extends 'base.html' %}
   {% load static %}
-  {% block title %} Plataforma Intersectorial de Comunicaci&oacute;n shorten {% endblock %}
+  {% block title %} Administración de Reportes Periodisticos {% endblock %}
   {% block content %}  
   {% load render_table from django_tables2 %}
   {% if messages %}
