--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,6 +1,6 @@
   {% extends 'base.html' %}
   {% load static %}
-  {% block title %} Plataforma Intersectorial de Comunicaci&oacute;n OGCS {% endblock %}
+  {% block title %} Administración de Reportes Periodisticos {% endblock %}
   {% block content %}
     <div id="contenido">
       <div id="contenido_izq">
