--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@ table tr td{padding-left:10px;}
             <a class="dropdown-toggle menublanco" data-toggle="dropdown" href="">Mantenimiento<b class="caret"></b></a>
             <ul class="dropdown-menu">                  
                <li class="opcion"><a href="{% url shorten-mantenimiento-doc-add %}" data-toggle="modal">Agregar Reporte</a></li>
-               <li class="opcion"><a href="#reportes" data-toggle="modal">Consultar Reporte</a></li>
+               <li class="opcion"><a href="{% url shorten-mantenimiento-doc-query %}" data-toggle="modal">Consultar Reporte</a></li>
             </ul>
           </li>
     
